# Project-Noor

./: .env.example  .gitignore  API_RATE_LIMITING_IMPLEMENTATION_GUIDE.md  CHAT_INTEGRATION_COMPLETE.md  CHAT_TESTING_GUIDE.md  COMPLETE_STATS_SYSTEM.md  DASHBOARD_STATS_GUIDE.md  Dockerfile  FINAL_SETUP_GUIDE.md  FRONTEND_COMPLETE.md  LAUNCH_READY_SUMMARY.md  LAUNCH_STATUS.md  RATE_LIMITING_IMPLEMENTATION_COMPLETE.md  README.md  SETUP_COMPLETE_GUIDE.md  SETUP_GUIDE.md  STATUS.md  VIDEO_CACHE_INTEGRATION_COMPLETE.md  dev.bat  docker-compose.yml  package-lock.json  package.json  requirements.txt  setup.py
.next/: trace
bondhu-ai/: .env.example  .gitignore  CHAT_ENHANCEMENTS.md  DEVELOPMENT.md  DOCKER_SETUP.md  Dockerfile  EMERGENCY_LAUNCH_PLAN.md  MOOD_SENTIMENT_TRACKING.md  PERSONALITY_UPDATE_SETUP.md  README.md  RL_INTEGRATION_COMPLETE.md  RL_INTEGRATION_GUIDE.md  RL_TRAINING_GUIDE.md  SUPABASE_RLS_FIX.md  SYSTEM_PROMPT_IMPROVEMENTS.md  TODO.md  diagnose.py  docker-compose.local.yml  docker-compose.yml  main.py  monitor_redis.py  nginx.conf  personality_pipeline_test_results.json  redis.conf  requirements-redis-celery.txt  requirements.txt  run_debug.py  simple_youtube_recommender.py  test_cache_integration.py  test_chat.py  test_chat_flow.py  test_gemini_api.py  test_imports.py  test_personality_integration.py  test_personality_trait_separation.py  (+3 more)
bondhu_ai/: README.md  pyproject.toml
bondhu_ai/src/bondhu_ai/: crew.py  main.py
bondhu_ai/src/bondhu_ai/config/: agents.yaml  tasks.yaml
bondhu_ai/src/bondhu_ai/tools/: __init__.py  custom_tool.py
config/: asgi.py  (+2 more)
(+228 files in other folders)
