[project]
name = "bondhu_ai"
version = "0.1.0"
description = "bondhu_ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.201.1,<1.0.0"
]

[project.scripts]
bondhu_ai = "bondhu_ai.main:run"
run_crew = "bondhu_ai.main:run"
train = "bondhu_ai.main:train"
replay = "bondhu_ai.main:replay"
test = "bondhu_ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
